fixes #10 and fixes #11 giant commit, got mongo working, got fastapi working, all docker containers are running from develop.yaml, removed dependencies, cleaned up some comments, now using async openai library, pretty baller

--- a/compose/mongo.yaml
+++ b/compose/mongo.yaml
@@ -3,6 +3,7 @@ services:
     image: mongo
     container_name: mongo
     restart: unless-stopped
+    entrypoint: ["/usr/bin/mongod", "--bind_ip_all"] # oh my god
     ports:
       - "27017:27017"
     volumes:
