--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -1,5 +1,5 @@
 services:
-  backend:
+  fastapi:
     build:
       context: ./backend/
       dockerfile: Dockerfile
@@ -8,7 +8,7 @@ services:
     environment:
       - OPENAI_API_KEY=${OPENAI_API_KEY}
     ports:
-      - "8000:8000"
+      - "8080:8080"
     develop:
       watch:
         - action: sync
