--- a/template.env
+++ b/template.env
@@ -2,5 +2,6 @@ OPENAI_API_KEY=
 DOMAIN=localhost
 MONGO_USERNAME=
 MONGO_PASSWORD=
+MONGO_DATABASE=
 BACKEND=http://fastapi:8080/
 CHAT_MODEL=gpt-4o
