--- a/template.env
+++ b/template.env
@@ -1,7 +1,8 @@
-OPENAI_API_KEY=
 DOMAIN=localhost
-MONGO_USERNAME=
-MONGO_PASSWORD=
-MONGO_DATABASE=
 BACKEND=http://fastapi:8080/
+BACKEND_API_KEY=test_key
+BACKEND_API_KEY_NAME=AITUTOR-API-KEY
 CHAT_MODEL=gpt-4o
+OPENAI_API_KEY=
+MONGO_USERNAME=user
+MONGO_PASSWORD=pass
