--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -35,6 +35,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  flutter_chat_ui: ^1.6.15
+  image_picker: ^1.1.2
+  file_picker: ^8.1.2
+  open_filex: ^4.5.0
+  path_provider: ^2.1.4
+  image_picker_platform_interface: ^2.10.0
+  flutter_chat_types: ^3.6.2
+  http: ^1.2.2
+  cross_file: ^0.3.4+2
+  flutter_markdown: ^0.7.4+1
+  uuid: ^4.5.1
 
 dev_dependencies:
   flutter_test:
