starting on jwts

--- a/template.env
+++ b/template.env
@@ -2,6 +2,7 @@ DOMAIN=localhost
 BACKEND=http://fastapi:8080/
 CHAT_MODEL=gpt-4o
 OPENAI_API_KEY=
+JWT_SECRET_KEY=test_secret
 BACKEND_API_KEY=test_key
 BACKEND_API_KEY_NAME=AITUTOR-API-KEY
 MONGO_USERNAME=user
