I got it working and its so dope. Log in works (without extension) fixes #27, also added a settings page for configuration, got data points fixes #16, looked into streaming response fixes #19

--- a/develop.yaml
+++ b/develop.yaml
@@ -35,6 +35,7 @@ services:
       CHAT_MODEL: ${CHAT_MODEL}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
+      JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       MONGO_USERNAME: ${MONGO_USERNAME}
       MONGO_PASSWORD: ${MONGO_PASSWORD}
     depends_on:
