--- a/extension/firefox/manifest.json
+++ b/extension/firefox/manifest.json
@@ -15,6 +15,7 @@
     "default_panel": "sidepanel.html",
     "default_icon": "icon/icon-32.png"
   },
+  "host_permissions": ["https://aitutor.live/*"],
   "permissions": ["activeTab"],
   "icons": {
     "16": "icon/icon-16.png",
