--- a/template.env
+++ b/template.env
@@ -7,3 +7,5 @@ BACKEND_API_KEY=test_key
 BACKEND_API_KEY_NAME=AITUTOR-API-KEY
 MONGO_USERNAME=user
 MONGO_PASSWORD=pass
+MONGO_DATABASE=aitutor
+ACME_EMAIL=
