--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   cross_file: ^0.3.4+2
   flutter_markdown: ^0.7.4+1
   uuid: ^4.5.1
+  mobile_scanner: ^6.0.2
 
 dev_dependencies:
   flutter_test:
