--- a/deploy.yaml
+++ b/deploy.yaml
@@ -18,7 +18,7 @@ services:
       MONGO_USERNAME: ${MONGO_USERNAME}
       MONGO_PASSWORD: ${MONGO_PASSWORD}
     depends_on:
-      - mongo
+      # - mongo
       - traefik
     ports:
       - "8080:8080"
@@ -59,10 +59,29 @@ services:
       - traefik.enable=true
       # - traefik.http.routers.streamlit.entrypoints=web,websecure
       - traefik.http.routers.streamlit.entrypoints=websecure
-      - traefik.http.routers.streamlit.rule=Host(`${DOMAIN}`) || Host(`www.${DOMAIN}`)
+      - traefik.http.routers.streamlit.rule=Host(`${DOMAIN}`)
+      - traefik.http.routers.www-streamlit.entrypoints=websecure
+      - traefik.http.routers.www-streamlit.rule=Host(`www.${DOMAIN}`)
+      - traefik.http.routers.www-streamlit.middlewares=redirect-to-non-www
+      - traefik.http.routers.www-streamlit.tls.certresolver=production
       - traefik.http.routers.streamlit.tls=true
       - traefik.http.routers.streamlit.tls.certresolver=production
       - traefik.http.services.streamlit.loadbalancer.server.port=8501
+
+      # redirect www to just aitutor
+      - "traefik.http.middlewares.redirect-to-non-www.redirectregex.regex=^https?://www\\.(.*)"
+      - "traefik.http.middlewares.redirect-to-non-www.redirectregex.replacement=https://$1"
+      - "traefik.http.middlewares.redirect-to-non-www.redirectregex.permanent=true"
+
+  whoami:
+    image: traefik/whoami
+    environment:
+      DOMAIN: ${DOMAIN}
+    labels:
+      - traefik.enable=true
+      - "traefik.http.routers.whoami.rule=Host(`whoami.${DOMAIN}`)"
+      - "traefik.http.routers.whoami.entrypoints=websecure"
+      - "traefik.http.routers.whoami.tls.certresolver=production"
 
 networks:
   web:
