WE ARE DEPLOYED fixes #39, query params are working fixes #40

--- a/compose/traefik.yaml
+++ b/compose/traefik.yaml
@@ -22,14 +22,14 @@ services:
       - "--entrypoints.websecure.address=:443"
       # - "--certificatesresolvers.production.acme.caserver=https://acme-v02.api.letsencrypt.org/directory"
       - "--certificatesresolvers.production.acme.tlschallenge=true"
-      - "--certificatesresolvers.production.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
+      # - "--certificatesresolvers.production.acme.caserver=https://acme-staging-v02.api.letsencrypt.org/directory"
       - "--certificatesresolvers.production.acme.email=${ACME_EMAIL}"
       - "--certificatesresolvers.production.acme.storage=/letsencrypt/acme.json"
       # - "--certificatesresolvers.production.acme.httpchallenge=true"
       # - "--certificatesresolvers.production.acme.httpchallenge.entrypoint=web"
 
     ports:
-      # - 80:80
+      - 80:80
       - 443:443
       # [Optional] Dashboard
       # - 8080:8080
