--- a/compose/mongo.yaml
+++ b/compose/mongo.yaml
@@ -5,8 +5,8 @@ services:
     entrypoint:
       - /usr/bin/mongod
       - --bind_ip_all
-    ports:
-      - "27017:27017"
+    # ports:
+    #   - "27017:27017"
     networks:
       - web
     volumes:
