--- a/extension/chrome/manifest.json
+++ b/extension/chrome/manifest.json
@@ -15,6 +15,6 @@
   "side_panel": {
     "default_path": "sidepanel.html"
   },
-  "host_permissions": ["http://localhost:8501/*", "https://localhost:8501/*"],
+  "host_permissions": ["https://aitutor.live/*"],
   "permissions": ["sidePanel", "storage", "cookies", "scripting"]
 }
