--- a/extension/firefox/manifest.json
+++ b/extension/firefox/manifest.json
@@ -7,7 +7,7 @@
     "scripts": ["background.js"]
   },
   "action": {
-    "default_icon": "icon/icon-32.png",
+    "default_icon": "128.png",
     "default_title": "Toggle Sidebar"
   },
   "sidebar_action": {
@@ -20,6 +20,6 @@
   "icons": {
     "16": "icon/icon-16.png",
     "32": "icon/icon-32.png",
-    "128": "icon/icon-128.png"
+    "128": "128.png"
   }
 }
