--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   flutter_markdown: ^0.7.4+1
   uuid: ^4.5.1
   mobile_scanner: ^6.0.2
+  shared_preferences: ^2.3.3
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
