Added group buttons, and made ugly customizations to another group of buttons

--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   mobile_scanner: ^6.0.2
   shared_preferences: ^2.3.3
   provider: ^6.1.2
+  group_button: ^5.3.4
 
 dev_dependencies:
   flutter_test:
