--- a/playground/pubspec.yaml
+++ b/playground/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
   shared_preferences: ^2.3.3
   provider: ^6.1.2
   group_button: ^5.3.4
+  flutter_dotenv: ^5.2.1
+
 
 dev_dependencies:
   flutter_test:
@@ -73,7 +75,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
