--- a/streamlit/Dockerfile
+++ b/streamlit/Dockerfile
@@ -3,9 +3,11 @@ FROM python:3.12
 
 WORKDIR /app
 
-COPY . .
+COPY ./requirements.txt .
 
-RUN pip install -r requirements.txt
+RUN pip install -r requirements.txt --upgrade
+
+COPY . .
 
 RUN python util.py
 
