--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,8 +2,10 @@ FROM python:3.12
 
 WORKDIR /app
 
-COPY . .
+COPY ./requirements.txt .
 
 RUN pip install --no-cache-dir --upgrade -r requirements.txt
+
+COPY . .
 
 EXPOSE 8080
