--- a/develop.yaml
+++ b/develop.yaml
@@ -1,6 +1,6 @@
-include:
-  - path: ./plausible/compose.yaml
-    project_directory: .
+# include:
+#   - path: ./plausible/compose.yaml
+#     project_directory: .
 
 services:
   traefik:
@@ -109,6 +109,7 @@ services:
     environment:
       DOMAIN: ${DOMAIN}
       BACKEND: ${BACKEND}
+      BASE_URL: ${BASE_URL}
       BACKEND_API_KEY: ${BACKEND_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
     develop:
