--- a/v2svelte/package.json
+++ b/v2svelte/package.json
@@ -44,6 +44,9 @@
     "@ai-sdk/svelte": "^1.0.11",
     "@floating-ui/dom": "1.6.13",
     "ai": "^4.0.36",
-    "highlight.js": "11.11.1"
+    "dompurify": "^3.2.3",
+    "highlight.js": "11.11.1",
+    "lucide-svelte": "^0.471.0",
+    "marked": "^15.0.6"
   }
 }
