--- a/svelte/package.json
+++ b/svelte/package.json
@@ -45,6 +45,7 @@
     "@floating-ui/dom": "1.6.13",
     "ai": "^4.0.36",
     "dompurify": "^3.2.3",
+    "dotenv": "^16.4.7",
     "highlight.js": "11.11.1",
     "lucide-svelte": "^0.471.0",
     "marked": "^15.0.6"
