ok this seems a viable solution for katex rendering, or something to base it off of

--- a/svelte/package.json
+++ b/svelte/package.json
@@ -47,8 +47,9 @@
 		"dompurify": "^3.2.3",
 		"dotenv": "^16.4.7",
 		"highlight.js": "11.11.1",
+		"katex": "^0.16.21",
 		"lucide-svelte": "^0.471.0",
 		"marked": "^15.0.6",
-		"katex": "^0.16.21"
+		"marked-katex-extension": "^5.1.4"
 	}
 }
