fixes #105, fixes #110, fixes #111 made a bunch of fixes to python and security

--- a/deploy.yaml
+++ b/deploy.yaml
@@ -7,6 +7,8 @@ include:
     project_directory: .
   - path: ./compose/whoami.yaml
     project_directory: .
+  - path: ./python_sandbox/compose.yaml
+    project_directory: .
 
 services:
   fastapi:
