--- a/python_sandbox/compose.yaml
+++ b/python_sandbox/compose.yaml
@@ -4,6 +4,7 @@ services:
       context: ./python_sandbox/
       dockerfile: Dockerfile
     command: fastapi run main.py --host 0.0.0.0 --port 8081
+    restart: always
     develop:
       watch:
         - action: sync
