a very large update, added some tests, updated models, working on analyitics

--- a/develop.yaml
+++ b/develop.yaml
@@ -41,6 +41,7 @@ services:
       CHAT_MODEL: ${CHAT_MODEL}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
+      PLAUSIBLE_API_KEY: ${PLAUSIBLE_API_KEY}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       MONGO_USERNAME: ${MONGO_USERNAME}
       MONGO_PASSWORD: ${MONGO_PASSWORD}
@@ -137,6 +138,7 @@ services:
       BASE_URL: ${BASE_URL}
       BACKEND_API_KEY: ${BACKEND_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
+      PLAUSIBLE_API_KEY: ${PLAUSIBLE_API_KEY}
     develop:
       watch:
         - action: sync
