--- a/deploy.yaml
+++ b/deploy.yaml
@@ -29,6 +29,7 @@ services:
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       ANTHROPIC_API_KEY: ${ANTHROPIC_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
+      PLAUSIBLE_API_KEY: ${PLAUSIBLE_API_KEY}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       MONGO_USERNAME: ${MONGO_USERNAME}
       MONGO_PASSWORD: ${MONGO_PASSWORD}
@@ -59,6 +60,7 @@ services:
       BASE_URL: ${BASE_URL}
       BACKEND_API_KEY: ${BACKEND_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
+      PLAUSIBLE_API_KEY: ${PLAUSIBLE_API_KEY}
     develop:
       watch:
         - action: sync
