--- a/svelte/package.json
+++ b/svelte/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"@ai-sdk/svelte": "^1.0.11",
 		"@floating-ui/dom": "1.6.13",
+		"@sveltejs/adapter-node": "^5.2.12",
 		"ai": "^4.0.36",
 		"dompurify": "^3.2.3",
 		"dotenv": "^16.4.7",
