--- a/develop.yaml
+++ b/develop.yaml
@@ -18,8 +18,8 @@ services:
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
     ports:
-      - "80:80"
-      - "8000:8000"
+      - "${HOST_PORT:-80}:80"
+      - "8080:8080" # Traefik dashboard
     networks:
       - web
     volumes:
@@ -41,22 +41,30 @@ services:
       CHAT_MODEL: ${CHAT_MODEL}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
+      BACKEND_API_KEY: ${BACKEND_API_KEY}
       PLAUSIBLE_API_KEY: ${PLAUSIBLE_API_KEY}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
-      MONGO_USERNAME: ${MONGO_USERNAME}
-      MONGO_PASSWORD: ${MONGO_PASSWORD}
+      MONGO_APP_USERNAME: ${MONGO_APP_USERNAME}
+      MONGO_APP_PASSWORD: ${MONGO_APP_PASSWORD}
+      MONGO_DATABASE: ${MONGO_DATABASE}
+      MONGO_HOST: mongo
+      MONGO_AUTH_SOURCE: ${MONGO_AUTH_SOURCE:-admin}
     depends_on:
       - mongo
       - traefik
-    ports:
-      - "8080:8080"
     networks:
       - web
     labels:
       - traefik.enable=true
-      - traefik.http.routers.fastapi.entrypoints=web
-      - traefik.http.routers.fastapi.rule=Host(`api.${DOMAIN}`)
+      - traefik.http.routers.backend.entrypoints=web
+      - traefik.http.routers.backend.rule=Host(`api.${DOMAIN}`)
       - traefik.http.services.backend.loadbalancer.server.port=8080
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
 
   python:
     build:
@@ -73,59 +81,57 @@ services:
     depends_on:
       - traefik
       - fastapi
-    ports:
-      - "8081:8081"
     networks:
       - web
 
   mongo:
     image: mongo
     restart: unless-stopped
-    # build:
-    #   context: ./mongo/
-    #   dockerfile: Dockerfile
-    entrypoint:
-      - /usr/bin/mongod
-      - --bind_ip_all
-    # entrypoint: sh -c "mongod --bind_ip_all && mongosh --file /tmp/mongo-dev-init.js"
-    # - "--auth"
-    # - "--authenticationDatabase"
-    # - "admin"
-    # oh my god
-    # command: >
-    #   bash -c "
-    #   mongod --bind_ip_all;
-    #   mongoimport -d aitutor -c users --file /tmp/users.json --drop;
-    #   mongoimport -d aitutor -c keys --file /tmp/keys.json --drop;
-    #   mongosh --file /tmp/mongo-dev-init.js;
-    #   "
+    environment:
+      # These are ROOT credentials, used only by Mongo to create the root user on first launch.
+      # Your .env file should define MONGO_ROOT_USERNAME and MONGO_ROOT_PASSWORD.
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_ROOT_USERNAME:-root}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_ROOT_PASSWORD:-example}
+      MONGO_INITDB_DATABASE: ${MONGO_DATABASE:-aitutor}
+      # Custom variables passed to our init scripts for creating the application user and API key.
+      # These are read by mongo-dev-init.js using getenv().
+      MONGO_APP_USERNAME: ${MONGO_APP_USERNAME}
+      MONGO_APP_PASSWORD: ${MONGO_APP_PASSWORD}
+      BACKEND_API_KEY: ${BACKEND_API_KEY}
     ports:
       - "27017:27017"
     networks:
       - web
     volumes:
-      # - ./dev/users.json:/tmp/users.json
-      # - ./dev/keys.json:/tmp/keys.json
-      # - ./mongo/mongo-dev-init.js:/tmp/mongo-dev-init.js
-      # - ./dev/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - mongo-data:/data/db
-      # - ./mongo/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro # in case of issues again
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USERNAME}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD}
-      MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
+      - ./mongo/mongo-dev-init.js:/docker-entrypoint-initdb.d/init-db.js:ro
+    healthcheck:
+      test: |
+        mongosh --host localhost --port 27017 --eval 'db.adminCommand("ping")'
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 20s
 
-      # MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
-  # mongo-express: # view from web
-  #   image: mongo-express
-  #   restart: unless-stopped
-  #   ports:
-  #     - 8081:8081
-  #   environment:
-  #     ME_CONFIG_MONGODB_ADMINUSERNAME: root
-  #     ME_CONFIG_MONGODB_ADMINPASSWORD: example
-  #     ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-  #     ME_CONFIG_BASICAUTH: false
+  mongo-express: # view from web
+    image: mongo-express
+    restart: unless-stopped
+    environment:
+      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USERNAME:-root}
+      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD:-example}
+      ME_CONFIG_MONGODB_SERVER: mongo
+      ME_CONFIG_BASICAUTH: false
+      ME_CONFIG_SITE_BASEURL: /mongo-express
+    depends_on:
+      mongo:
+        condition: service_healthy
+    networks:
+      - web
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.mongo-express.rule=Host(`${DOMAIN}`) && PathPrefix(`/mongo-express`)"
+      - "traefik.http.routers.mongo-express.entrypoints=web"
+      - "traefik.http.services.mongo-express.loadbalancer.server.port=8081"
 
   streamlit:
     build:
@@ -134,8 +140,8 @@ services:
     command: streamlit run app.py --server.port=8501 --server.address=0.0.0.0
     environment:
       DOMAIN: ${DOMAIN}
-      BACKEND: ${BACKEND}
-      BASE_URL: ${BASE_URL}
+      BACKEND: ${BACKEND:-http://fastapi:8080/}
+      BASE_URL: ${BASE_URL:-http://fastapi:8080/}
       BACKEND_API_KEY: ${BACKEND_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
       PLAUSIBLE_API_KEY: ${PLAUSIBLE_API_KEY}
@@ -148,15 +154,20 @@ services:
             - __pycache__/
     depends_on:
       - fastapi
-    # ports:
-    #   - "8501:8501"
     networks:
       - web
     labels:
       - traefik.enable=true
       - traefik.http.routers.streamlit.entrypoints=web
-      - traefik.http.routers.streamlit.rule=Host(`${DOMAIN}`) # && !PathPrefix(`/ntfy`)
+      - traefik.http.routers.streamlit.rule=Host(`${DOMAIN}`)
       - traefik.http.services.streamlit.loadbalancer.server.port=8501
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8501/"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
 
   # ntfy:
   #   image: binwiederhier/ntfy
