--- a/template.env
+++ b/template.env
@@ -1,5 +1,6 @@
 DOMAIN=localhost
 BACKEND=http://fastapi:8080/
+HOST_PORT=8080
 CHAT_MODEL=gpt-4o
 OPENAI_API_KEY=
 JWT_SECRET_KEY=test_secret
@@ -11,3 +12,7 @@ MONGO_DATABASE=aitutor
 ACME_EMAIL=
 ANTHROPIC_API_KEY=
 PLAUSIBLE_API_KEY=
+MONGO_ROOT_USERNAME=
+MONGO_ROOT_PASSWORD=
+MONGO_APP_USERNAME=
+MONGO_APP_PASSWORD=
