addeed landon as an admin maybe

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -4,6 +4,7 @@
 # review when someone opens a pull request.
 *   @spencer-thompson
 *   @Noble-Beazel
+*   @landontowers
 
 # Can add *.py to be owner of python files.
 # Can also specify files
