started working with the responses API, also lowered the size of the backend container by a significant amount

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,10 +1,11 @@
-FROM python:3.12
+# FROM python:3.12
+FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim
 
 WORKDIR /app
 
 COPY ./requirements.txt .
 
-RUN pip install --no-cache-dir --upgrade -r requirements.txt
+RUN uv pip install --no-cache-dir --upgrade -r requirements.txt
 
 COPY . .
 
