--- a/deploy.yaml
+++ b/deploy.yaml
@@ -15,7 +15,8 @@ services:
     build:
       context: ./backend/
       dockerfile: Dockerfile
-    command: fastapi run main.py --host 0.0.0.0 --port 8080
+    # command: fastapi run main.py --host 0.0.0.0 --port 8080
+    command: /app/.venv/bin/fastapi run main.py --host 0.0.0.0 --port 8080
     restart: unless-stopped
     develop:
       watch:
