--- a/develop.yaml
+++ b/develop.yaml
@@ -29,7 +29,8 @@ services:
     build:
       context: ./backend/
       dockerfile: Dockerfile
-    command: fastapi dev main.py --host 0.0.0.0 --port 8080
+    # command: fastapi dev main.py --host 0.0.0.0 --port 8080
+    command: /app/.venv/bin/fastapi dev main.py --host 0.0.0.0 --port 8080
     develop:
       watch:
         - action: sync
@@ -167,7 +168,6 @@ services:
       timeout: 5s
       retries: 5
       start_period: 30s
-
 
   # ntfy:
   #   image: binwiederhier/ntfy
