--- a/develop.yaml
+++ b/develop.yaml
@@ -138,7 +138,7 @@ services:
     build:
       context: ./streamlit/
       dockerfile: Dockerfile
-    command: streamlit run app.py --server.port=8501 --server.address=0.0.0.0
+    command: uv run streamlit run app.py --server.port=8501 --server.address=0.0.0.0
     environment:
       DOMAIN: ${DOMAIN}
       BACKEND: ${BACKEND:-http://fastapi:8080/}
