All python images should be much smaller and build times significantly reduced

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -3,9 +3,16 @@ FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim
 
 WORKDIR /app
 
-COPY ./requirements.txt .
+# COPY ./requirements.txt .
 
-RUN uv pip install --no-cache-dir --upgrade -r requirements.txt
+# RUN uv pip install --no-cache-dir --upgrade -r requirements.txt
+
+# Copy dependencies
+COPY ./pyproject.toml .
+COPY ./uv.lock .
+
+# Update dependencies
+RUN uv sync --frozen --no-cache
 
 COPY . .
 
