--- a/python_sandbox/Dockerfile
+++ b/python_sandbox/Dockerfile
@@ -1,10 +1,18 @@
-FROM python:3.13
+# FROM python:3.13
+FROM ghcr.io/astral-sh/uv:python3.12-bookworm-slim
 
 WORKDIR /app
 
-COPY ./requirements.txt .
+# COPY ./requirements.txt .
+#
+# RUN pip install --no-cache-dir --upgrade -r requirements.txt
 
-RUN pip install --no-cache-dir --upgrade -r requirements.txt
+# Copy dependencies
+COPY ./pyproject.toml .
+COPY ./uv.lock .
+
+# Update dependencies
+RUN uv sync --frozen --no-cache
 
 COPY . .
 
