--- a/develop.yaml
+++ b/develop.yaml
@@ -12,13 +12,14 @@ services:
     image: traefik:latest
     restart: unless-stopped
     command:
-      # - "--log.level=DEBUG"
+      - "--log.level=DEBUG"
       - "--api.insecure=true"
       - "--providers.docker=true"
       - "--providers.docker.exposedbydefault=false"
       - "--entrypoints.web.address=:80"
     ports:
-      - "${HOST_PORT:-80}:80"
+      # - "${HOST_PORT:-80}:80"
+      - "80:80"
     networks:
       - web
     volumes:
@@ -29,7 +30,8 @@ services:
       context: ./backend/
       dockerfile: Dockerfile
     # command: fastapi dev main.py --host 0.0.0.0 --port 8080
-    command: /app/.venv/bin/fastapi dev main.py --host 0.0.0.0 --port 8080
+    # command: /app/.venv/bin/fastapi dev main.py --host 0.0.0.0 --port 8080
+    command: uv run fastapi dev main.py --host 0.0.0.0 --port 8080
     develop:
       watch:
         - action: sync
@@ -41,7 +43,7 @@ services:
       CHAT_MODEL: ${CHAT_MODEL}
       OPENAI_API_KEY: ${OPENAI_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
-      BACKEND_API_KEY: ${BACKEND_API_KEY}
+      BACKEND_API_KEY: ${DEV_BACKEND_API_KEY}
       PLAUSIBLE_API_KEY: ${PLAUSIBLE_API_KEY}
       JWT_SECRET_KEY: ${JWT_SECRET_KEY}
       MONGO_APP_USERNAME: ${MONGO_APP_USERNAME}
@@ -59,18 +61,18 @@ services:
       - traefik.http.routers.backend.entrypoints=web
       - traefik.http.routers.backend.rule=Host(`api.${DEV_DOMAIN}`)
       - traefik.http.services.backend.loadbalancer.server.port=8080
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    #   start_period: 30s
 
   python:
     build:
       context: ./python_sandbox/
       dockerfile: Dockerfile
-    command: fastapi dev main.py --host 0.0.0.0 --port 8081
+    command: uv run fastapi dev main.py --host 0.0.0.0 --port 8081
     develop:
       watch:
         - action: sync
@@ -97,7 +99,7 @@ services:
       # These are read by mongo-dev-init.js using getenv().
       MONGO_APP_USERNAME: ${MONGO_APP_USERNAME}
       MONGO_APP_PASSWORD: ${MONGO_APP_PASSWORD}
-      BACKEND_API_KEY: ${BACKEND_API_KEY}
+      BACKEND_API_KEY: ${DEV_BACKEND_API_KEY}
     ports:
       - "27017:27017"
     networks:
@@ -105,33 +107,33 @@ services:
     volumes:
       - mongo-data:/data/db
       - ./mongo/mongo-dev-init.js:/docker-entrypoint-initdb.d/init-db.js:ro
-    healthcheck:
-      test: |
-        mongosh --host localhost --port 27017 --eval 'db.adminCommand("ping")'
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 20s
+    # healthcheck:
+    #   test: |
+    #     mongosh --host localhost --port 27017 --eval 'db.adminCommand("ping")'
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    #   start_period: 20s
 
-  mongo-express: # view from web
-    image: mongo-express
-    restart: unless-stopped
-    environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USERNAME:-root}
-      ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD:-example}
-      ME_CONFIG_MONGODB_SERVER: mongo
-      ME_CONFIG_BASICAUTH: false
-      ME_CONFIG_SITE_BASEURL: /mongo-express
-    depends_on:
-      mongo:
-        condition: service_healthy
-    networks:
-      - web
-    labels:
-      - "traefik.enable=true"
-      - "traefik.http.routers.mongo-express.rule=Host(`${DEV_DOMAIN}`) && PathPrefix(`/mongo-express`)"
-      - "traefik.http.routers.mongo-express.entrypoints=web"
-      - "traefik.http.services.mongo-express.loadbalancer.server.port=8081"
+  # mongo-express: # view from web
+  #   image: mongo-express
+  #   restart: unless-stopped
+  #   environment:
+  #     ME_CONFIG_MONGODB_ADMINUSERNAME: ${MONGO_ROOT_USERNAME:-root}
+  #     ME_CONFIG_MONGODB_ADMINPASSWORD: ${MONGO_ROOT_PASSWORD:-example}
+  #     ME_CONFIG_MONGODB_SERVER: mongo
+  #     ME_CONFIG_BASICAUTH: false
+  #     ME_CONFIG_SITE_BASEURL: /mongo-express
+  #   depends_on:
+  #     mongo:
+  #       condition: service_healthy
+  #   networks:
+  #     - web
+  #   labels:
+  #     - "traefik.enable=true"
+  #     - "traefik.http.routers.mongo-express.rule=Host(`${DEV_DOMAIN}`) && PathPrefix(`/mongo-express`)"
+  #     - "traefik.http.routers.mongo-express.entrypoints=web"
+  #     - "traefik.http.services.mongo-express.loadbalancer.server.port=8081"
 
   streamlit:
     build:
@@ -142,7 +144,7 @@ services:
       DOMAIN: ${DEV_DOMAIN}
       BACKEND: ${BACKEND:-http://fastapi:8080/}
       BASE_URL: ${BASE_URL:-http://fastapi:8080/}
-      BACKEND_API_KEY: ${BACKEND_API_KEY}
+      BACKEND_API_KEY: ${DEV_BACKEND_API_KEY}
       BACKEND_API_KEY_NAME: ${BACKEND_API_KEY_NAME}
       PLAUSIBLE_API_KEY: ${PLAUSIBLE_API_KEY}
     develop:
@@ -154,6 +156,7 @@ services:
             - __pycache__/
     depends_on:
       - fastapi
+      - traefik
     networks:
       - web
     labels:
@@ -161,12 +164,13 @@ services:
       - traefik.http.routers.streamlit.entrypoints=web
       - traefik.http.routers.streamlit.rule=Host(`${DEV_DOMAIN}`)
       - traefik.http.services.streamlit.loadbalancer.server.port=8501
-    healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8501/"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-      start_period: 30s
+    # # we might have issues with using localhost in docker
+    # healthcheck:
+    #   test: ["CMD", "curl", "-f", "http://localhost:8501/"]
+    #   interval: 10s
+    #   timeout: 5s
+    #   retries: 5
+    #   start_period: 30s
 
   # ntfy:
   #   image: binwiederhier/ntfy
