--- a/stage.yaml
+++ b/stage.yaml
@@ -14,7 +14,8 @@ services:
       context: ./backend/
       dockerfile: Dockerfile
     # command: fastapi run main.py --host 0.0.0.0 --port 8080
-    command: /app/.venv/bin/fastapi run main.py --host 0.0.0.0 --port 8080
+    command: uv run fastapi run main.py --host 0.0.0.0 --port 8080
+    # command: /app/.venv/bin/fastapi run main.py --host 0.0.0.0 --port 8080
     restart: unless-stopped
     develop:
       watch:
