--- a/python_sandbox/compose.yaml
+++ b/python_sandbox/compose.yaml
@@ -3,7 +3,7 @@ services:
     build:
       context: ./python_sandbox/
       dockerfile: Dockerfile
-    command: fastapi run main.py --host 0.0.0.0 --port 8081
+    command: uv run fastapi run main.py --host 0.0.0.0 --port 8081
     restart: always
     develop:
       watch:
